--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dairy_app",
+  "name": "dairy_vue_ui",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "zhangshuxian <zhangsc678@icloud.com>",
