--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.4",
+    "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
     "vue": "^2.5.2",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
